# mcp-debugger

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CURRENT_TASK.md  LAUNCH_POSTS.md  LICENSE  PROJECT_CONTEXT.md  README.md  RELEASING.md  pyproject.toml
.agent/: config.yml  superpowers-version.json
.agent/rules/: superpowers.md
.agent/skills/brainstorming/: SKILL.md  visual-companion.md
.agent/skills/brainstorming/scripts/: server.cjs  start-server.sh  stop-server.sh
.agent/skills/copywriter/: SKILL.md
.agent/skills/dispatching-parallel-agents/: SKILL.md
.agent/skills/executing-plans/: SKILL.md
.agent/skills/finishing-a-development-branch/: SKILL.md
.agent/skills/frontend-design/: SKILL.md
.agent/skills/frontend-design/reference/: color-and-contrast.md  interaction-design.md  motion-design.md  responsive-design.md  spatial-design.md  typography.md  ux-writing.md
.agent/skills/frontend-developer/: SKILL.md
.agent/skills/frontend-developer/references/: react-nextjs.md  svelte-sveltekit.md  vanilla.md  vue-nuxt.md
.agent/skills/i18n-localization/: SKILL.md
.agent/skills/mobile-developer/: SKILL.md
.agent/skills/mobile-developer/references/: android-native.md  flutter.md  ios-native.md  react-native.md
.agent/skills/mobile-developer/references/android-rules/: android-coroutines.md  android-testing.md  compose-navigation.md  xml-to-compose-migration.md
.agent/skills/mobile-developer/references/flutter-rules/: dart-best-practices.md  dart-checks-migration.md  dart-doc-validation.md  dart-matcher-best-practices.md  dart-modern-features.md  dart-package-maintenance.md
.agent/skills/mobile-developer/references/ios-rules/: image-optimization.md  layout-best-practices.md  performance-patterns.md  scroll-patterns.md  sheet-navigation-patterns.md  state-management.md  view-structure.md
.agent/skills/mobile-uiux-promax/: SKILL.md
.agent/skills/product-manager/: SKILL.md
.agent/skills/subagent-driven-development/: SKILL.md  implementer-prompt.md
.agent/skills/subscription-billing/: SKILL.md
.agent/skills/systematic-debugging/: SKILL.md
.agent/skills/test-driven-development/: SKILL.md
.agent/skills/using-git-worktrees/: SKILL.md
.agent/skills/using-superpowers/: SKILL.md
.agent/skills/using-superpowers/references/: antigravity-tools.md
.agent/skills/ux-designer/: SKILL.md
.agent/skills/verification-before-completion/: SKILL.md
.agent/skills/writing-plans/: SKILL.md
.agent/skills/writing-skills/: SKILL.md  testing-skills-with-subagents.md
.github/workflows/: ci.yml  release.yml
docs/: 00-project-charter.md  01-architecture-deep.md  02-data-models-detailed.md  03-database-schema.md  04-25-day-plan-detailed.md  05-mcp-protocol-reference.md  06-production-standards.md  07-glossary.md  08-faq.md  AI_INSTRUCTIONS.md  README.md  architecture.md  commands.md  compatibility.md  config.md  contributing.md  faq.md  replay.md  tutorials.md
docs/diagrams/: README.md
scripts/: check_version.py  generate_demo_gif.py  stress_test.py  test_real_servers.py
src/mcp_debugger/: __init__.py  analytics.py  cli.py  config.py  validate_live.py  version.py
src/mcp_debugger/exporters/: __init__.py  json_exporter.py  markdown_exporter.py  otlp_exporter.py  otlp_replay_exporter.py
src/mcp_debugger/protocol/: error_classifier.py  schemas.py  validator.py
src/mcp_debugger/proxy/: stdio_proxy.py
src/mcp_debugger/replay/: __init__.py  diff.py  engine.py
src/mcp_debugger/storage/: database.py
tests/: conftest.py  test_cli.py  test_config.py  test_error_classifier.py  test_exporters.py  test_integration.py  test_property.py  test_protocol.py  test_proxy.py  test_replay.py  test_stats.py  test_storage.py  test_stress.py
tests/mock_servers/: echo_server.py
tests/test_cli/: test_cli_config.py  test_cli_edge_cases.py  test_export.py  test_inspect.py  test_list.py  test_proxy.py  test_replay.py  test_stats.py  test_validate.py
tests/test_config/: test_config.py
tests/test_exporters/: test_json.py  test_markdown.py  test_otlp.py
tests/test_integration/: test_integration.py
tests/test_protocol/: test_error_classifier.py  test_schemas.py  test_validator.py
tests/test_proxy/: test_stdio_proxy.py
tests/test_replay/: test_diff.py  test_engine.py
tests/test_storage/: test_database.py
