[project]
name = "mcp-debugger"
version = "0.1.0"
description = "MCP proxy debugger – inspect, record, validate, and replay MCP sessions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.7.0"]

[project.scripts]
mcp-debugger = "mcp_debugger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
